# qsarmodeling

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  index.html  justfile  package.json  pnpm-lock.yaml  turbo.json  vite.config.ts
.agents/docs/tauri/: llms-full.md
.agents/skills/mantine/: llms-full.md  llms.md
.github/workflows/: run-tests.yml  tauri-release.yml
apps/backend/: README.md  app.py  package.json  pyproject.toml  turbo.json
apps/desktop/: index.html  package.json  turbo.json
apps/desktop/scripts/: sync-backend-sidecar.mjs
apps/desktop/src/: App.css  App.tsx  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: _error.rs  commands.rs  error.rs  events.rs  lib.rs  workflow.rs
apps/desktop/src-tauri/src/core/: mod.rs
apps/desktop/src-tauri/src/core/domain/: filter.rs
apps/desktop/src-tauri/src/core/state/: mod.rs  pipeline.rs  task.rs
apps/desktop/src/components/ui/: ColorSchemeToggle.tsx  ExpandableSection.tsx  HelpTooltip.tsx  ResultCard.tsx  SliderFieldWithTooltip.tsx  StatsRing.tsx  StepCard.tsx
apps/desktop/src/components/workflow/: FilterPanel.tsx  LoadDataPanel.tsx  SelectionPanel.tsx  ValidationPanel.tsx  WorkflowTimeline.tsx
apps/desktop/src/hooks/: useQsarWorkflow.ts
apps/desktop/src/lib/: mockQsarBackend.ts  workflowClient.ts
apps/frontend/: package.json  turbo.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/lib/: mockQsarBackend.ts
apps/web/: package.json
docs/: VALIDATION_IMPLEMENTATION.md  mvp_planejamento_estrategico.md
scripts/: convert-icons.sh
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: load_dataset.rs
src-tauri/capabilities/: default.json
src-tauri/examples/data/carbox/: y.csv
src-tauri/examples/data/dream/: README.md  y.csv
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  core.rs  lib.rs  main.rs  utils.rs  workflow.rs
src-tauri/src/app/: commands.rs  mod.rs  session.rs
src-tauri/src/core/: TODO.md  commands.rs  error.rs  filter.rs  ga.rs  loader.rs  mod.rs  ops.rs  ops1.rs  pls.rs  session.rs  stats.rs  tests.rs  types.rs
src-tauri/src/core/ga/: config.rs  events.rs  fitness.rs
src-tauri/src/utils/: mod.rs  stats.rs
src-tauri/src/validation/: kfold.rs  lno.rs  loo.rs  metrics.rs  mod.rs  yrand.rs
src/components/contexts/: WorkflowContext.tsx
src/components/ui/: HelpTooltip.tsx  NumberFieldWithTooltip.tsx  ResultCard.tsx  SliderFieldWithTooltip.tsx  StepCard.tsx
src/components/workflow/: FilterPanel.tsx  GaPanel.tsx  LoadDataPanel.tsx  OpsPanel.tsx  SelectionPanel.tsx  ValidationPanel.tsx  WorkflowContext.tsx
src/components/workflow/SelectionPanel/: GaPanel.tsx  OpsPanel.tsx  index.tsx
src/hooks/: useQsarWorkflow.ts
src/lib/: workflowClient.ts
