[package]
name = "qsarmodeling"
version.workspace = true
description = "A Tauri App"
authors = ["Heliton Martins <helitonmrf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qsarmodeling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-typegen = "0.5.0"

[dependencies]
uuid = "1.23.1"
rand = "0.10.1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
anyhow = "1.0.102"
thiserror = "2.0.17"
csv = "1.3.1"
ndarray = "0.17.2"
genetic_algorithm = "0.27.2"
tauri-plugin-fs = "2"
tauri-plugin-devtools = "2.1.0"

[dev-dependencies]
tempfile = "3.23.0"
criterion = "0.8.2"

[[bench]]
name = "load_dataset"
harness = false
