[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.29",
    "qsarmodelingpy>=0.3.1",
    "uvicorn>=0.47.0",
]

[tool.uv.sources]
qsarmodelingpy = { path = "../../packages/qsarmodelingpy", editable = true }
